refactoring the use of 'master' to 'main'

--- a/notebooks/setup/Setup.ipynb
+++ b/notebooks/setup/Setup.ipynb
@@ -93,7 +93,7 @@
     "# !git commit -m 'files created/changed in mybinder'\n",
     "\n",
     "# ### note: command below didn't work , looks like mybinder is blocking ssh\n",
-    "# !git push origin master"
+    "# !git push origin main"
    ]
   }
  ],
